[gd_scene load_steps=44 format=3 uid="uid://cdmckyq563mja"]

[ext_resource type="Script" uid="uid://catequcfrpbt8" path="res://script/Player.gd" id="1_1jxqw"]
[ext_resource type="Texture2D" uid="uid://btu1o80x3wspb" path="res://sprite/player-gridsheet.png" id="2_jrjdb"]
[ext_resource type="PackedScene" uid="uid://djsf3itc002gl" path="res://scene/state_machine.tscn" id="2_onrkg"]
[ext_resource type="Script" uid="uid://dhepx2737bxmw" path="res://script/state/player_state/IdleState.gd" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://dlwylnp3l1144" path="res://script/state/player_state/DropState.gd" id="4_bup7g"]
[ext_resource type="Script" uid="uid://ki1u23wwktia" path="res://script/state/player_state/MoveState.gd" id="4_hqtel"]
[ext_resource type="Script" uid="uid://dgcyi6lkgvs6g" path="res://script/state/player_state/AttackState.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://cfgsbje7vi3tp" path="res://script/component/MovementComponent.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://c3tue7f8ul8dv" path="res://script/state/player_state/SprintState.gd" id="7_b26j0"]
[ext_resource type="Script" uid="uid://bj2fo22m487fj" path="res://script/brain/InputBrain.gd" id="8_dw050"]
[ext_resource type="Script" uid="uid://c3vaqpne6gsdr" path="res://script/state/player_state/InteractState.gd" id="8_ivps1"]
[ext_resource type="Script" uid="uid://xerbnbwebg7h" path="res://script/state/player_state/UseState.gd" id="9_j4wxg"]
[ext_resource type="PackedScene" uid="uid://cqttkqoc4j0fr" path="res://scene/speech_text.tscn" id="10_n7ghd"]
[ext_resource type="PackedScene" uid="uid://bdsdvn2l2ejwd" path="res://scene/component/interacter_component.tscn" id="11_dk1vr"]
[ext_resource type="Script" uid="uid://djdu4ngv8cr8e" path="res://script/state/player_state/DeadState.gd" id="11_iuf2t"]
[ext_resource type="Script" uid="uid://dlihm53dfpyd5" path="res://script/component/RotationTrackerComponent.gd" id="13_34jf3"]
[ext_resource type="PackedScene" uid="uid://dh4w6wbocgxad" path="res://scene/component/pickup_item_component.tscn" id="14_u7b46"]
[ext_resource type="Script" uid="uid://0nqej4vc3au4" path="res://script/component/StepRecorderComponent.gd" id="17_4ja17"]
[ext_resource type="Script" uid="uid://dcdbliakm3u3e" path="res://script/component/StatDataComponent.gd" id="18_v4iqv"]
[ext_resource type="Script" uid="uid://r6v4breyygeo" path="res://script/component/AnimationController.gd" id="19_4reak"]
[ext_resource type="PackedScene" uid="uid://bypnx10jtyfcw" path="res://scene/component/hurtbox_component.tscn" id="19_42h83"]
[ext_resource type="Script" uid="uid://dathf1gj3y2oa" path="res://script/Flippables.gd" id="19_kk4ol"]
[ext_resource type="PackedScene" uid="uid://djox8a46od6wh" path="res://scene/component/damager_component.tscn" id="21_jrjdb"]
[ext_resource type="PackedScene" uid="uid://lxue4cgo42vb" path="res://scene/component/player_vision_component.tscn" id="24_wt23p"]
[ext_resource type="PackedScene" uid="uid://bp7rg1dk1tc2p" path="res://scene/component/tooltip_activator_component.tscn" id="25_k8m7u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_34jf3"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iuf2t"]
size = Vector2(11, 17)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k8m7u"]
height = 36.0

[sub_resource type="Animation" id="Animation_kk4ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3vgh4"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(0, 0.5, 0.5),
"update": 0,
"values": [0.0, 1.49575, 2.3178]
}

[sub_resource type="Animation" id="Animation_8ie14"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 9)]
}

[sub_resource type="Animation" id="Animation_jrjdb"]
resource_name = "idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1.2, 1.4, 2.4, 2.8, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(0, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_l1uwf"]
resource_name = "idle_hold"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_k8m7u"]
resource_name = "scared"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_wt23p"]
resource_name = "sprint"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_xsw3c"]
resource_name = "sprint_hold"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pk8el"]
resource_name = "use"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 7), Vector2i(0, 7)]
}

[sub_resource type="Animation" id="Animation_4reak"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_qucqc"]
resource_name = "walk_hold"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 5), Vector2i(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4reak"]
_data = {
&"RESET": SubResource("Animation_kk4ol"),
&"attack": SubResource("Animation_3vgh4"),
&"dead": SubResource("Animation_8ie14"),
&"idle": SubResource("Animation_jrjdb"),
&"idle_hold": SubResource("Animation_l1uwf"),
&"scared": SubResource("Animation_k8m7u"),
&"sprint": SubResource("Animation_wt23p"),
&"sprint_hold": SubResource("Animation_xsw3c"),
&"use": SubResource("Animation_pk8el"),
&"walk": SubResource("Animation_4reak"),
&"walk_hold": SubResource("Animation_qucqc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wt23p"]
radius = 104.077

[sub_resource type="CircleShape2D" id="CircleShape2D_k8m7u"]
radius = 19.0263

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_1jxqw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 6)
shape = SubResource("CapsuleShape2D_onrkg")

[node name="state_machine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("2_onrkg")]
unique_name_in_owner = true
initial_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "attack_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("3_i3pqv")
move_state = NodePath("../move_state")
attack_state = NodePath("../atttack_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="move_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "attack_state", "sprint_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("4_hqtel")
idle_state = NodePath("../idle_state")
attack_state = NodePath("../atttack_state")
sprint_state = NodePath("../sprint_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="sprint_state" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "idle_state", "attack_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("7_b26j0")
move_state = NodePath("../move_state")
idle_state = NodePath("../idle_state")
attack_state = NodePath("../atttack_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="atttack_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "dead_state", "damager_component")]
script = ExtResource("5_sweqy")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")
dead_state = NodePath("../dead_state")
damager_component = NodePath("../../flippables/damager_component")

[node name="interact_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("8_ivps1")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="use_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("9_j4wxg")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="drop_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("4_bup7g")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="dead_state" type="Node" parent="state_machine"]
script = ExtResource("11_iuf2t")

[node name="movement_component" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_2hs0m")
speed = 5.0
sprint_multiplier = 2.0
metadata/_custom_type_script = "uid://cfgsbje7vi3tp"

[node name="input_brain" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_dw050")

[node name="interacter_component" parent="." instance=ExtResource("11_dk1vr")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="interacter_component"]
shape = SubResource("CircleShape2D_34jf3")

[node name="speech_text" parent="." instance=ExtResource("10_n7ghd")]
unique_name_in_owner = true
offset_left = -40.0
offset_top = -39.0
offset_right = -40.0
offset_bottom = -39.0

[node name="rotation_tracker_component" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_34jf3")

[node name="stat_data_component" type="Node" parent="." node_paths=PackedStringArray("hunger_degeneration_timer")]
unique_name_in_owner = true
script = ExtResource("18_v4iqv")
hunger_degeneration_timer = NodePath("hunger_degen_timer")

[node name="hunger_degen_timer" type="Timer" parent="stat_data_component"]
wait_time = 2.0
autostart = true

[node name="hurtbox_component" parent="." instance=ExtResource("19_42h83")]
unique_name_in_owner = true
position = Vector2(2, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox_component"]
shape = SubResource("RectangleShape2D_iuf2t")

[node name="step_recorder_component" type="Node" parent="." node_paths=PackedStringArray("target_brain", "target_pickup_item_component", "target_vision_component")]
unique_name_in_owner = true
script = ExtResource("17_4ja17")
target_brain = NodePath("../input_brain")
target_pickup_item_component = NodePath("../flippables/pickup_item_component")
target_vision_component = NodePath("../player_vision_component")

[node name="flippables" type="Node2D" parent="."]
script = ExtResource("19_kk4ol")

[node name="damager_component" parent="flippables" instance=ExtResource("21_jrjdb")]
position = Vector2(20, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="flippables/damager_component"]
shape = SubResource("CapsuleShape2D_k8m7u")

[node name="pickup_item_component" parent="flippables" instance=ExtResource("14_u7b46")]
unique_name_in_owner = true
position = Vector2(7, 4)

[node name="player_sprite" type="Sprite2D" parent="flippables"]
texture = ExtResource("2_jrjdb")
hframes = 7
vframes = 10

[node name="animation_controller" type="Node" parent="." node_paths=PackedStringArray("anim_player", "movement_component", "pickup_item_component", "stat_data_component", "flippables")]
unique_name_in_owner = true
script = ExtResource("19_4reak")
anim_player = NodePath("../AnimationPlayer")
movement_component = NodePath("../movement_component")
pickup_item_component = NodePath("../flippables/pickup_item_component")
stat_data_component = NodePath("../stat_data_component")
flippables = NodePath("../flippables")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4reak")
}

[node name="player_vision_component" parent="." instance=ExtResource("24_wt23p")]
unique_name_in_owner = true
position = Vector2(0, -7)
vertical_fov = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_vision_component"]
shape = SubResource("CircleShape2D_wt23p")

[node name="tooltip_activator_component" parent="." instance=ExtResource("25_k8m7u")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tooltip_activator_component"]
shape = SubResource("CircleShape2D_k8m7u")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(0, -7)
current = true
